Added minor comments

--- a/conf/snort.conf
+++ b/conf/snort.conf
@@ -2,6 +2,7 @@ var TARGETS [10.0.0.10,10.0.0.12,10.0.1.10,10.0.1.14]
 
 output alert_fast: /var/log/snort_alerts.log
 
+# Default Snort rule set
 include $RULE_PATH/attack-responses.rules
 include $RULE_PATH/backdoor.rules
 include $RULE_PATH/bad-traffic.rules
@@ -39,8 +40,8 @@ include $RULE_PATH/icmp.rules
 include $RULE_PATH/info.rules
 #include $RULE_PATH/malware-backdoor.rules
 #include $RULE_PATH/malware-cnc.rules
-#include $RULE_PATH/malware-other.rules
-#include $RULE_PATH/malware-tools.rules
+include $RULE_PATH/malware-other.rules
+include $RULE_PATH/malware-tools.rules
 include $RULE_PATH/misc.rules
 #include $RULE_PATH/multimedia.rules
 #include $RULE_PATH/mysql.rules
@@ -84,9 +85,9 @@ include $RULE_PATH/scan.rules
 #include $RULE_PATH/server-oracle.rules
 #include $RULE_PATH/server-other.rules
 #include $RULE_PATH/server-webapp.rules
-# Note: These rules are disable by default as they are
-# too coarse grained. Enabling them causes a large
-# performance impact
+
+# Note: These rules are disable by default as they are too coarse grained.
+# Enabling them causes a large performance impact
 #include $RULE_PATH/shellcode.rules
 #include $RULE_PATH/smtp.rules
 #include $RULE_PATH/snmp.rules
@@ -119,7 +120,11 @@ include $RULE_PATH/virus.rules
 #include $RULE_PATH/community-web-iis.rules
 #include $RULE_PATH/community-web-misc.rules
 #include $RULE_PATH/community-web-php.rules
+
+# Community Snort rule set
 include $RULE_PATH/community.rules
+
+# Emerging Threats Snort rule set
 include $RULE_PATH/emerging-exploit.rules
 include $RULE_PATH/emerging-malware.rules
 include $RULE_PATH/emerging-scan.rules
